--- a/index.css
+++ b/index.css
@@ -2,6 +2,14 @@ body {
  margin: 0;
 }
 
+.topbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 3em;
+  background-color: white;
+}
+
 .topbar a {
   text-decoration: none;
 }
