--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 body {
  margin: 0;
+ font-family: 'Roboto', sans-serif;
 }
 
 .topbar {
@@ -7,9 +8,19 @@ body {
   top: 0;
   width: 100%;
   height: 3em;
+  display:flex;
+  align-items:center;
+  justify-content: space-between; 
   background-color: white;
 }
 
 .topbar a {
   text-decoration: none;
+  color: black;
+}
+
+.logo {
+  font-family: 'Oswald', sans-serif;
+  font-size: 1.3em;
+  letter-spacing: -1px;
 }
