--- a/index.css
+++ b/index.css
@@ -7,20 +7,54 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
-  height: 3em;
+  height: 3.5em;
   display:flex;
   align-items:center;
-  justify-content: space-between; 
   background-color: white;
 }
 
 .topbar a {
   text-decoration: none;
-  color: black;
+}
+
+.hamburger {
+  margin-top: 1.2em;
+  margin-left: 1.7em;
+}
+
+.icon {
+  margin-left: 1em;
 }
 
 .logo {
+  display: flex;
+  color: black;
+}
+
+.text-logo {
   font-family: 'Oswald', sans-serif;
   font-size: 1.3em;
   letter-spacing: -1px;
+  margin-left: 0.1em;
+}
+
+.side-buttons {
+  position: absolute;
+  right: 0;
+  margin-right: 1.7em;
+  display: flex;
+}
+
+.user-avatar {
+  width: 1.8em;
+  height: 1.8em;
+  background-color: crimson;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.user-avatar-text {
+  margin: auto;
+  font-size: 1.3rem;
+  color: white;
 }
