--- a/index.css
+++ b/index.css
@@ -38,23 +38,63 @@ body {
   margin-left: 0.1em;
 }
 
+.search-input {
+  margin-left: 19.5em;
+  width: 41em;
+  display: flex;
+  align-items: center;
+}
+
+.search-input-field {
+  width: 90%;
+  height: 1.9em;
+  padding-left: 0.5em;
+  font-size: 1rem;
+  font-family: inherit;
+  border: 1px solid grey;
+  border-radius: 0;
+}
+
+.search-input-field:focus,
+.search-input-button:focus {
+  outline: none;
+  border-color: #2196F3;
+}
+
+.search-input-button {
+  margin-right: 1.2em;
+  height: 2.2em;
+  width: 4.5em;
+  border: 1px solid grey;
+  border-radius: 0;
+  cursor: pointer;
+}
+
+.search-input-mic {
+  margin-top: 0.4em;
+}
+
 .side-buttons {
   position: absolute;
   right: 0;
   margin-right: 1.7em;
   display: flex;
+  width: 12em;
+  justify-content: space-around;
 }
 
 .user-avatar {
+  position: relative;
   width: 1.8em;
   height: 1.8em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: crimson;
   border-radius: 50%;
   cursor: pointer;
 }
 
 .user-avatar-text {
-  margin: auto;
-  font-size: 1.3rem;
   color: white;
 }
