--- a/index.css
+++ b/index.css
@@ -3,9 +3,21 @@ body {
  font-family: 'Roboto', sans-serif;
 }
 
+button {
+  color: darkgray;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+}
+
+button:focus {
+  outline: none;
+}
+
 .topbar {
   position: fixed;
   top: 0;
+  z-index: 1;
   width: 100%;
   height: 3.5em;
   display:flex;
@@ -104,11 +116,68 @@ main {
   padding: 2em 5em;
 }
 
+.left-column {
+  width: 67em;
+}
+
 .video-frame {
   position: relative;
+  width: 100%;
   margin-top: 3em;
+  height: 37em;
 }
 
 .video-info {
-  width: 65em;
+  display: flex;
+  flex-direction: column;
+  border-bottom: 1px solid lightgray;
+}
+
+.video-info p {
+  margin-bottom: 0.5em;
+  font-size: 1.2rem;
+}
+
+.video-data {
+  margin-bottom: 1em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: gray;
+}
+
+.video-data p {
+  margin: 0;
+  font-size: inherit;
+}
+
+.video-buttons {
+  width: 27.5em;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.video-buttons button {
+  display: flex;
+  align-items: center;
+}
+
+.video-buttons span {
+  margin-left: 0.3em;
+  font-size: 0.9rem;
+}
+
+.channel-content {
+  margin-top: 1em;
+  padding-bottom: 1em;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  border-bottom: 1px solid lightgray;
+}
+
+.top-channel-content {
+  display: flex;
+  justify-content: space-between;
 }
