--- a/index.css
+++ b/index.css
@@ -1,6 +1,16 @@
+/* General */
+
 body {
  margin: 0;
  font-family: 'Roboto', sans-serif;
+}
+
+main {
+  margin-top: 3em;
+  padding: 2em 5em;
+  display: flex;
+  justify-content: space-between;
+  background-color: #f8f8f8;
 }
 
 button {
@@ -17,6 +27,9 @@ button:focus {
 a {
   text-decoration: none;
 }
+
+
+/* Topbar */
 
 .topbar {
   position: fixed;
@@ -112,19 +125,18 @@ a {
   color: white;
 }
 
-main {
-  background-color: #f8f8f8;
-  padding: 2em 5em;
-}
+/* Left Side */
 
 .left-column {
   width: 67em;
 }
 
+/* Video Youtuve */
+
 .video-frame {
   position: relative;
   width: 100%;
-  margin-top: 3em;
+  /* margin-top: 3em; */
   height: 37em;
 }
 
@@ -168,6 +180,8 @@ main {
   margin-left: .3em;
   font-size: .9rem;
 }
+
+/* Channel Info */
 
 .channel-content {
   margin-top: 1em;
@@ -219,6 +233,8 @@ main {
   width: 50%;
   font-size: .9rem;
 }
+
+/* Comments */
 
 .comments-header {
   display: flex;
@@ -320,4 +336,96 @@ main {
 
 .replys p {
   margin-left: .8em;
+}
+
+/* Left Side */
+
+.video-suggestions {
+  margin-left: 2em;
+  width: 25em;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.related-buttons {
+  display: flex;
+  align-items: center;
+}
+
+.rel-btn {
+  margin-right: .5em;
+  padding: 0.5em 1em;
+  color: #030303;
+  background-color: rgba(0,0,0,.05);
+  border: 1px solid rgba(0,0,0,.1);
+  border-radius: 1em;
+  font-family: inherit;
+  font-size: .9em;
+}
+
+.all-btn {
+  color: white;
+  background-color: black;
+}
+
+.video-suggested {
+  margin-top: 1em;
+  display: flex;
+}
+
+.thumbnail {
+  display: flex;
+}
+
+.video-duration {
+  margin-left: -3.3em;
+  margin-top: 5.5em;
+  padding: .2em;
+  height: fit-content;
+  font-size: .8rem;
+  font-weight: bold;
+  color: white;
+  background-color: black;
+  border-radius: 3px;
+}
+
+.thumbnail-overlay {
+  visibility: hidden;
+  margin-top: .3em;
+  margin-left: -1.9em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.thumbnail-overlay-icon {
+  margin-bottom: .1em;
+  padding: .2em;
+  background-color: black;
+  border-radius: 3px;
+}
+
+.thumbnail:hover .thumbnail-overlay {
+  visibility: initial;
+}
+
+.video-suggested-info {
+  margin-left: 0.9em;
+  display: flex;
+  flex-direction: column;
+}
+
+.video-suggested-info h3 {
+  margin: 0;
+  padding: 0;
+  font-size: .9em;
+  font-weight: 500;
+  color: #030303;
+}
+
+.video-suggested-info p {
+  margin: .2em;
+  font-size: .8em;
+  color: #606060;
 }
