--- a/index.css
+++ b/index.css
@@ -1,16 +1,23 @@
-/* General */
+/* Global */
 
 body {
- margin: 0;
- font-family: 'Roboto', sans-serif;
+  margin: 0;
+  margin-top: 3em;
+  font-family: 'Roboto', sans-serif;
 }
 
 main {
-  margin-top: 3em;
   padding: 2em 5em;
   display: flex;
   justify-content: space-between;
   background-color: #f8f8f8;
+}
+
+@media only screen and (max-width: 1062px) {
+  main {
+    flex-direction: column;
+    padding: 2em 2em;
+  }
 }
 
 button {
@@ -28,7 +35,6 @@ a {
   text-decoration: none;
 }
 
-
 /* Topbar */
 
 .topbar {
@@ -37,8 +43,8 @@ a {
   z-index: 1;
   width: 100%;
   height: 3.5em;
-  display:flex;
-  align-items:center;
+  display: flex;
+  align-items: center;
   background-color: white;
 }
 
@@ -125,19 +131,54 @@ a {
   color: white;
 }
 
+@media only screen and (max-width: 1350px) {
+  .search-input {
+    margin-left: 10em;
+    width: 30em;
+  }
+}
+
+@media only screen and (max-width: 1062px) {
+  .search-input {
+    margin-left: 10em;
+    width: 20em;
+  }
+}
+
+@media only screen and (max-width: 870px) {
+  .search-input,
+  .side-buttons {
+    visibility: hidden;
+  }
+}
+
 /* Left Side */
 
 .left-column {
   width: 67em;
 }
 
-/* Video Youtuve */
+@media only screen and (max-width: 1062px) {
+  .left-column {
+    width: 100%;
+  }
+}
+
+/* Video Youtube */
+
+.player {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 25px;
+  height: 0;
+}
 
 .video-frame {
-  position: relative;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  /* margin-top: 3em; */
-  height: 37em;
+  height: 100%;
 }
 
 .video-info {
@@ -174,6 +215,12 @@ a {
 .video-buttons button {
   display: flex;
   align-items: center;
+}
+
+@media only screen and (max-width: 680px) {
+  .video-buttons {
+    visibility: hidden;
+  }
 }
 
 .video-buttons span {
@@ -338,7 +385,7 @@ a {
   margin-left: .8em;
 }
 
-/* Left Side */
+/* Right Side */
 
 .video-suggestions {
   margin-left: 2em;
@@ -351,6 +398,12 @@ a {
 .related-buttons {
   display: flex;
   align-items: center;
+}
+
+@media only screen and (max-width: 600px) {
+  .related-buttons {
+    visibility: hidden;
+  }
 }
 
 .rel-btn {
@@ -372,6 +425,12 @@ a {
 .video-suggested {
   margin-top: 1em;
   display: flex;
+}
+
+@media only screen and (max-width: 600px) {
+  .video-suggested {
+    flex-direction: column;
+  }
 }
 
 .thumbnail {
@@ -411,7 +470,7 @@ a {
 }
 
 .video-suggested-info {
-  margin-left: 0.9em;
+  margin-left: .9em;
   display: flex;
   flex-direction: column;
 }
@@ -422,6 +481,13 @@ a {
   font-size: .9em;
   font-weight: 500;
   color: #030303;
+}
+
+@media only screen and (max-width: 550px) {
+  .video-suggested-info {
+    margin-top: .5em;
+    width: min-content;
+  }
 }
 
 .video-suggested-info p {
